converted tag page to tailwind

--- a/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
+++ b/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <section>
-        <h6 class="mb-2 md:mb-4 text-lg tracking-tight leading-10 font-semibold text-gray-900 sm:leading-none md:text-xl">
+        <h6 class="mb-2 md:mb-4 text-lg tracking-tight font-semibold text-gray-900 sm:leading-none md:text-xl">
           Share this link (expires in 48 hours):
         </h6>
         <textarea #shareUrlTextarea rows="8" class="font-mono w-full">{{ shareUrl }}</textarea>
