--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -239,7 +239,7 @@
           Run Tag Search
         </button>
       </div>
-      <div class="md:w-1/2">
+      <div class="md:w-1/2 mt-1 md:mt-0">
         <button
           class="px-8 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
