--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -66,7 +66,7 @@
                 {{ document.documentId }}
                 <div>
                   <button
-                    class="md:mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+                    class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
                       text-white focus:outline-none focus:shadow-outline
                       bg-green-600 hover:bg-green-500
                       transition duration-150 ease-in-out md:text-base"
@@ -75,7 +75,7 @@
                     Share...
                   </button>
                   <button
-                    class="md:mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+                    class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
                       text-white focus:outline-none focus:shadow-outline
                       bg-green-600 hover:bg-green-500
                       transition duration-150 ease-in-out md:text-base"
