--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -99,7 +99,7 @@
               </td>
               <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
                 <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Date Added</span>
-                {{ document.inserteddate | datetimeFormat: 'yyyy-MM-dd HH:mm Z':currentTimezone }}
+                {{ document.insertedDate | datetimeFormat: 'yyyy-MM-dd HH:mm Z':currentTimezone }}
               </td>
             </tr>
           </tbody>
