--- a/src/app/plugins/authentication/components/change-password/change-password.component.html
+++ b/src/app/plugins/authentication/components/change-password/change-password.component.html
@@ -7,7 +7,7 @@
     <button [hidden]="!showVerificationCodeResendButton" class="btn btn-primary mt-2 mb-5" (click)="requestPasswordResetVerificationCodeResend()">
       Send New Reset Code
     </button>
-    <form [hidden]="showVerificationCodeResendButton" [formGroup]="form">
+    <form [hidden]="showVerificationCodeResendButton" [formGroup]="form" onSubmit="changePassword()">
       <div [hidden]="verificationCode" class="md:flex md:items-center mx-4 mb-4 relative">
         <div class="md:w-1/3">
           <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="oldPassword">
@@ -71,24 +71,24 @@
             />
         </div>
       </div>
+      <div class="mt-5 sm:mt-8 flex justify-center">
+        <button
+          (click)="changePassword()"
+          class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+            text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline
+            transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
+          >
+          Change Password
+        </button>
+        <button
+          (click)="cancel()"
+          class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+            text-green-700 bg-yellowGray-500 hover:bg-yellowGray-400 focus:outline-none focus:shadow-outline
+            transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
+          >
+          Cancel
+        </button>
+      </div>
     </form>
-    <div class="mt-5 sm:mt-8 flex justify-center">
-      <button
-        (click)="changePassword()"
-        class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
-          text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline
-          transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
-        >
-        Change Password
-      </button>
-      <button
-        (click)="cancel()"
-        class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
-          text-green-700 bg-yellowGray-500 hover:bg-yellowGray-400 focus:outline-none focus:shadow-outline
-          transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
-        >
-        Cancel
-      </button>
-    </div>
   </section>
 </div>
