--- a/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
     Forgot Your Console Password?
   </h2>
   <section class="mb-16">
-    <form [formGroup]="form">
+    <form [formGroup]="form" onSubmit="resetPassword()">
       <div class="md:flex md:items-center mx-4 mb-4 relative">
         <div class="md:w-1/3">
           <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="email">
@@ -26,24 +26,24 @@
             />
         </div>
       </div>
+      <div class="mt-5 sm:mt-8 flex justify-center">
+        <button
+          (click)="resetPassword()"
+          class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+            text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline
+            transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
+          >
+          Reset Password
+        </button>
+        <button
+          (click)="cancel()"
+          class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+            text-green-700 bg-yellowGray-500 hover:bg-yellowGray-400 focus:outline-none focus:shadow-outline
+            transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
+          >
+          Cancel
+        </button>
+      </div>
     </form>
-    <div class="mt-5 sm:mt-8 flex justify-center">
-      <button
-        (click)="resetPassword()"
-        class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
-          text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline
-          transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
-        >
-        Reset Password
-      </button>
-      <button
-        (click)="cancel()"
-        class="px-8 py-3 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
-          text-green-700 bg-yellowGray-500 hover:bg-yellowGray-400 focus:outline-none focus:shadow-outline
-          transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10"
-        >
-        Cancel
-      </button>
-    </div>
   </section>
 </div>
