--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -42,6 +42,7 @@
         <app-api-item id="GET-document-tag" [apiItem]="getDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="DELETE-document-tag" [apiItem]="deleteDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-document-url" [apiItem]="getDocumentUrlApiItem" [isCollapsed]="true"></app-api-item>
+        <app-api-item id="GET-document-versions" [apiItem]="getDocumentVersionsApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-documents-upload" [apiItem]="getDocumentsUploadApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-document-upload" [apiItem]="getDocumentUploadApiItem" [isCollapsed]="true"></app-api-item>
       </section>
