--- a/src/app/plugins/authentication/components/login/login.component.html
+++ b/src/app/plugins/authentication/components/login/login.component.html
@@ -4,7 +4,7 @@
     Sign In to FormKiQ Stacks Console
   </h2>
   <section class="mb-16">
-    <form [formGroup]="form" onSubmit="signIn()">
+    <form [formGroup]="form">
       <div class="md:flex md:items-center mx-4 mb-4 relative">
         <div class="md:w-1/3">
           <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="email">
