--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -26,6 +26,16 @@
               Search
             </a>
           </li>
+          <li>
+            <a
+              [routerLink]="['/api']"
+              [fragment]="sitesFragment"
+              (click)="navigationService.emitInlineNavItemClick('apiHeaderSitesClicked')"
+              class="font-bold text-orange-900 hover:text-orange-600"
+              >
+              Sites
+            </a>
+          </li>
         </ul>
       </nav>
       <section class="lg:w-full mb-12">
@@ -51,6 +61,12 @@
           Search
         </h3>
         <app-api-item id="POST-search" [apiItem]="postSearchApiItem"></app-api-item>
+      </section>
+      <section class="lg:w-full mb-12">
+        <h3 #headerSites class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
+          Sites
+        </h3>
+        <app-api-item id="GET-sites" [apiItem]="getSitesApiItem"></app-api-item>
       </section>
     </div>
   </div>
