--- a/src/app/plugins/authentication/components/change-password/change-password.component.html
+++ b/src/app/plugins/authentication/components/change-password/change-password.component.html
@@ -8,9 +8,13 @@
       Send New Reset Code
     </button>
     <form [hidden]="showVerificationCodeResendButton" [formGroup]="form" onSubmit="changePassword()">
-      <div [hidden]="verificationCode" class="md:flex md:items-center mx-4 mb-4 relative">
+      <div
+        class="md:flex md:items-center mx-4 mb-4 relative"
+        [ngClass]="{'invisible': verificationCode }"
+        >
         <div class="md:w-1/3">
           <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="oldPassword">
+            {{ verificationCode }}
             Current Password
           </label>
         </div>
