--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -1,6 +1,10 @@
 
-
-<section class="lg:w-full mb-12">
+<section [hidden]="showSearchFields" class="lg:w-full mb-12">
+  <h3 class="mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-3xl">
+    Untagged Documents
+  </h3>
+</section>
+<section [hidden]="!showSearchFields" class="lg:w-full mb-12">
   <h3 class="mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-3xl">
     Document Search
   </h3>
