--- a/src/app/plugins/document-explorer/pages/tags/tags.component.html
+++ b/src/app/plugins/document-explorer/pages/tags/tags.component.html
@@ -69,9 +69,10 @@
             <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
               <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Key</span>
               {{ tag.key }}
+              <span *ngIf="tag.type === 'systemdefined'" class="block text-sm tracking-tight">(read-only)</span>
               <div>
                 <button
-                  *ngIf="f.tagKey.value != tag.key"
+                  *ngIf="f.tagKey.value != tag.key && tag.type !== 'systemdefined'"
                   class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
                     text-white focus:outline-none focus:shadow-outline
                     bg-green-600 hover:bg-green-500
@@ -81,7 +82,7 @@
                   Edit
                 </button>
                 <button
-                  *ngIf="f.tagKey.value != tag.key"
+                  *ngIf="f.tagKey.value != tag.key && tag.type !== 'systemdefined'"
                   class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
                     text-white focus:outline-none focus:shadow-outline
                     bg-green-600 hover:bg-green-500
