edit, delete, add, save functionality

--- a/src/app/plugins/tagging-tool/pages/screen/screen.component.html
+++ b/src/app/plugins/tagging-tool/pages/screen/screen.component.html
@@ -22,25 +22,22 @@
     *ngIf="!this.reachedEndOfUntaggedDocuments"
     class="lg:flex lg:flex-columns"
     >
-    <div class="lg:inline w-full lg:w-64 lg:flex-grow-0">
-      <button
-        class="lg:hidden px-2 md:px-8 py-2 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
-        text-white bg-green-500 hover:bg-green-500 focus:outline-none focus:shadow-outline
-        transition duration-150 ease-in-out md:py-2 md:px-10"
-        >
-        Add/Edit Tags...
-      </button>
+    <div class="lg:inline w-full lg:w-128 lg:flex-grow-0">
       <h4 class="text-lg font-bold mb-4">
         Tags
       </h4>
-      <div class="hidden lg:block pr-2">
+      <div class="block pr-2">
         <form [formGroup]="form">
+          <h5 class="text-sm tracking-tight font-bold mb-2">
+            Add New:
+          </h5>
           <textarea
+            rows="2"
             aria-label="Key"
             name="tagKey"
             formControlName="tagKey"
             placeholder="key"
-            class="mb-4 font-bold text-sm tracking-tight appearance-none rounded-md relative block w-full px-2 py-2 border border-gray-600
+            class="mb-4 font-bold text-sm tracking-tight appearance-none rounded-md relative block w-full p-2 border border-gray-600
               placeholder-gray-800 text-gray-900 rounded-t-md
               focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:leading-5"
             ></textarea>
@@ -51,14 +48,14 @@
             name="tagValue"
             formControlName="tagValue"
             placeholder="value"
-            class="mb-3 text-sm tracking-tight appearance-none rounded-md relative block w-full px-2 py-2 border border-gray-600
+            class="mb-3 text-sm tracking-tight appearance-none rounded-md relative block w-full p-2 border border-gray-600
               placeholder-gray-500 text-gray-900 rounded-t-md
               focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:leading-5"
             ></textarea>
             <button
-              (click)="saveTag()"
+              (click)="addTag()"
               [disabled]="this.form.invalid"
-              class="w-full mb-4 px-2 py-2 border border-transparent text-sm tracking-tight leading-6 font-medium rounded-md shadow
+              class="w-full mb-4 p-2 border border-transparent text-sm tracking-tight leading-6 font-medium rounded-md shadow
                 text-white focus:outline-none focus:shadow-outline
                 transition duration-150 ease-in-out"
               [ngClass]="{
@@ -73,8 +70,9 @@
           <app-paging [results]="tagResults" (previousEmitter)="loadPreviousTagPage()" (nextEmitter)="loadNextTagPage()"></app-paging>
         </div>
         <table
+          id="tag-table"
           *ngIf="tagResults$ | async as tagResults"
-          class="w-full border-collapse mt-2"
+          class="w-full border-collapse mt-2 relative"
           >
           <tbody>
             <tr
@@ -88,25 +86,67 @@
               </td>
             </tr>
             <tr
-              *ngFor="let tag of tagResults.tags"
+              *ngFor="let tag of tagResults.tags; index as i"
+              [attr.id]="tag ? 'tag-' + tag.key : ''"
               class="flex flex-row flex-wrap mb-1 border rounded-md"
               [ngClass]="{
                 'bg-orange-500': tag.key === 'untagged',
                 'bg-yellow-500': tag.key !== 'untagged'
               }"
               >
-              <div class="absolute left-0 pt-2 pl-2">
-                <i class="fas fa-pen text-xl" title="Edit"></i>
+              <div
+                *ngIf="tag.type === 'userdefined'"
+                class="absolute flex right-0 py-2 pr-2"
+                >
+                <div
+                  (click)="editTag(i)"
+                  class="cursor-pointer"
+                  >
+                  <i class="fas fa-pen text-lg" title="Edit"></i>
+                </div>
+                <div
+                  (click)="deleteTag(tag.key)"
+                  class="ml-2 cursor-pointer"
+                  >
+                  <i class="fas fa-trash-alt text-lg" title="Delete"></i>
+                </div>
               </div>
               <td
-                class="w-full block px-1"
+                class="w-full block pl-1 pr-8"
                 >
-                <textarea readonly="true" rows="1" class="bg-transparent font-bold text-sm tracking-tight w-full resize-none focus:outline-none">{{ tag.key }}</textarea>
+                <textarea
+                  readonly="true"
+                  rows="1"
+                  class="bg-transparent font-bold text-sm tracking-tight w-full resize-none focus:outline-none"
+                  >{{ tag.key }}</textarea>
               </td>
               <td
                 class="w-full block px-1"
                 >
-                <textarea *ngIf="tag.value" readonly="true" rows="1" class="bg-transparent text-sm tracking-tight w-full resize-none focus:outline-none">{{ tag.value }}</textarea>
+                <textarea
+                  readonly="true"
+                  rows="1"
+                  class="identifier-tag-value-textarea bg-transparent text-sm tracking-tight w-full resize-none focus:outline-none"
+                  >{{ tag.value }}</textarea>
+              </td>
+              <td
+                class="hidden text-center w-full px-1"
+                >
+                <div class="flex w-full">
+                  <button
+                    class="identifier-save-button w-full mx-1 mb-4 p-2 border border-transparent text-sm tracking-tight leading-6 font-medium rounded-md shadow
+                      text-white focus:outline-none focus:shadow-outline
+                      bg-gray-500 hover:bg-gray-500
+                      transition duration-150 ease-in-out"
+                    >Save</button>
+                  <button
+                    (click)="editTag(-1)"
+                    class="w-full mx-1 mb-4 p-2 border border-transparent text-sm tracking-tight leading-6 font-medium rounded-md shadow
+                      text-white focus:outline-none focus:shadow-outline
+                      bg-orange-500 hover:bg-orange-700
+                      transition duration-150 ease-in-out"
+                    >Cancel</button>
+                </div>
               </td>
             </tr>
           </tbody>
