--- a/src/app/plugins/tagging-tool/pages/screen/screen.component.html
+++ b/src/app/plugins/tagging-tool/pages/screen/screen.component.html
@@ -52,7 +52,7 @@
               placeholder-gray-500 text-gray-900 rounded-t-md
               focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:leading-5"
             ></textarea>
-            <button
+          <button
               (click)="addTag()"
               [disabled]="this.form.invalid"
               class="w-full mb-4 p-2 border border-transparent text-sm tracking-tight leading-6 font-medium rounded-md shadow
@@ -158,6 +158,21 @@
     </div>
     <div class="w-full lg:flex-grow">
       <div class="max-w-screen-xl mx-4 relative">
+        <div class="absolute right-0">
+          <button
+            *ngIf="currentDocumentIsMarkedUntagged"
+            (click)="markAsTagged()"
+            class="w-full mb-4 p-2 border border-transparent text-lg tracking-tight leading-6 font-medium rounded-md shadow
+              text-white focus:outline-none focus:shadow-outline
+              bg-green-600 hover:bg-green-500
+              transition duration-150 ease-in-out"
+            >
+            Mark as Tagged
+            <span class="block text-xs">
+              (and Go To Next)
+            </span>
+          </button>
+        </div>
         <h2 class="text-2xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
           Document Tagging
           <span *ngIf="currentDocument" class="mt-2 block text-lg tracking-tight">
