--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -72,7 +72,16 @@
                       transition duration-150 ease-in-out md:text-base"
                     (click)="shareDocument(document.documentId, shareModal)"
                     >
-                    Share...
+                    Share
+                  </button>
+                  <button
+                    class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+                      text-white focus:outline-none focus:shadow-outline
+                      bg-green-600 hover:bg-green-500
+                      transition duration-150 ease-in-out md:text-base"
+                    (click)="openTaggingTool(document.documentId)"
+                    >
+                    Tagging Tool
                   </button>
                   <button
                     class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
@@ -81,7 +90,7 @@
                       transition duration-150 ease-in-out md:text-base"
                     (click)="viewDocumentTags(document.documentId)"
                     >
-                    Info and Tags...
+                    More Info...
                   </button>
                 </div>
               </td>
